--- a/static/quicklaunchbar.css
+++ b/static/quicklaunchbar.css
@@ -4,7 +4,6 @@
     left: 0px;
     text-decoration: none;
     font-size: 24px;
-    opacity: 0.2;
 }
 #quicklaunchbar:hover {
     opacity: 1.0;
@@ -12,11 +11,16 @@
 #quicklaunchbar a {
     margin-left: 0.3em;
 }
+@media (hover: hover) {
+    #quicklaunchbar {
+        opacity: 0.3;
+    }
+}
 @media (max-width: 700px) {
     #quicklaunchbar {
         left: auto;
-	right: 0px;
-	opacity: 1.0;
+        right: 0px;
+        opacity: 1.0;
     }
 }
 
