--- a/static/quicklaunchbar.css
+++ b/static/quicklaunchbar.css
@@ -3,6 +3,7 @@
     top: 0px;
     left: 0px;
     text-decoration: none;
+    text-align: center;
     font-size: 24px;
 }
 #quicklaunchbar:hover {
@@ -21,7 +22,7 @@
     #quicklaunchbar {
         left: auto;
         right: 0px;
-        opacity: 1.0;
+        text-align: center;
     }
 }
 
