--- a/templates/quicklaunch.css
+++ b/templates/quicklaunch.css
@@ -1,4 +1,4 @@
-#quicklaunchbar {
+#quicklaunch {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -6,20 +6,20 @@
     text-align: center;
     font-size: 24px;
 }
-#quicklaunchbar:hover {
+#quicklaunch:hover {
     opacity: 1.0;
 }
-#quicklaunchbar a {
+#quicklaunch a {
     margin-left: 0.3em;
     text-decoration: none;
 }
 @media (hover: hover) {
-    #quicklaunchbar {
+    #quicklaunch {
         opacity: 0.3;
     }
 }
 @media (max-width: 700px) {
-    #quicklaunchbar {
+    #quicklaunch {
         left: auto;
         right: 0px;
         text-align: center;
