adding end date + bugfix

--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,7 @@
             <div class="date-range">
                 <div class="date-inputs">
                     <input type="date" name="start" id="start_date" value="{{ start }}" onchange="this.form.submit()">
+                    <input type="date" name="stop" id="end_date" value="{{ stop }}" onchange="this.form.submit()">
                 </div>
             </div>
 
