--- a/static/main.css
+++ b/static/main.css
@@ -193,7 +193,7 @@ h6 {
 }
 
 /* visually mark staged tag removals */
-.tag-pill.pending { opacity: 0.5; text-decoration: line-through; filter: grayscale(40%); }
+.tag-pill.removed { opacity: 0.5; text-decoration: line-through; filter: grayscale(40%); }
 
 #tagForm {
     border: 1px dashed #3d3d3d;
