--- a/templates/main.html
+++ b/templates/main.html
@@ -84,7 +84,7 @@
 
     <ul>
         {% for entry in entries %}
-        <li class="entry" data-entry-id="{{ entry.date.strftime(JS_ENTRY_ID_FORMAT) }}" data-tags="{{ ' '.join(entry.tags) }}" data-rel-path="{{ entry.rel_path }}" data-line-no="{{ entry.pos }}">
+        <li class="entry" data-entry-id="{{ entry.date.strftime(JS_ENTRY_ID_FORMAT) }}" data-tags="{{ ' '.join(entry.tags) }}" data-rel-path="/{{ entry.rel_path.as_posix() }}" data-line-no="{{ entry.pos }}">
              <div class="entry-date" title="click to copy reference to this entry" onclick="setClipboard('[journal entry {{ entry.date.strftime('%Y-%m-%d %H:%M')}}]({{ entry.location }})')">🔗 {{ entry.date.strftime('%Y-%m-%d %H:%M') }}</div>
              <div class="entry-content">
                  {{ entry.content | safe }}
@@ -92,7 +92,7 @@
                    <p>Tags:
                    {% for tag in entry.tags %}
                      <span class="tag-pill"><a class="removetaglink" href="/{{ tag }}.md">{{ tag }}</a>
-			     <span class="tag-remove" onclick="removeTagContent(this.parentElement, '/{{ entry.rel_path }}', '{{ entry.date.strftime(JS_ENTRY_ID_FORMAT) }}', '{{ tag }}')" title="click to remove tag '{{ tag }}' from entry">🗑️</span>
+			     <span class="tag-remove" onclick="removeTag(this, '/{{ entry.rel_path.as_posix() }}', '{{ entry.date.strftime(JS_ENTRY_ID_FORMAT) }}', '{{ tag }}')" title="click to remove tag '{{ tag }}' from entry">🗑️</span>
                      </span>
                      {% endfor %}
                    </p>
