--- a/static/main.css
+++ b/static/main.css
@@ -4,7 +4,7 @@ body {
     max-width: 90vw;
     margin: 0 auto;
     padding: 20px;
-    background: #f5f5f5;
+    background-color: #f5f5f5;
 }
 
 #toc {
@@ -12,7 +12,7 @@ body {
 }
 
 .entry {
-    background: white;
+    background-color: white;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 8px;
@@ -30,7 +30,7 @@ img {
     position: fixed;
     top: 12px;
     right: 12px;
-    background: white;
+    background-color: white;
     padding: 8px 10px;
     border-radius: 6px;
     box-shadow: 0 1px 6px rgba(0,0,0,0.08);
@@ -54,7 +54,7 @@ img {
     font-size: 10px;
 }
 
-#tag-selector .tag-count { color: #666; font-size: 0.85em; margin-left:6px; }
+#tag-selector .tag-count { color: #666; font-size: 0.85em; margin-left: 6px; }
 
 @media (max-width: 700px) {
     #tag-selector { width: calc(100% - 32px); top: 8px; right: 8px; padding: 8px; }
@@ -116,6 +116,33 @@ h6 {
     padding-left: 2.5em;
 }
 
+.hr-text {
+  border: 0;
+  height: 1.5em;
+  line-height: 1em;
+  position: relative;
+  text-align: center;
+  margin: auto;
+}
+
+.hr-text::before {
+    content: "";
+    background: linear-gradient(to right, transparent, rgb(82, 82, 82), transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+}
+
+.hr-text::after {
+    content: attr(data-content);
+    line-height: 1.5em;
+    position: relative;
+    background-color: #f5f5f5;
+    padding: 0 10px;
+}
+
 .entry-date {
     position: absolute;
     top: 20px;
@@ -123,7 +150,7 @@ h6 {
     color: #1a232b;
     font-size: 0.85em;
     font-family: monospace;
-    background: #f8f9fa;
+    background-color: #f8f9fa;
     padding: 4px 8px;
     border-radius: 4px;
     cursor: pointer;
@@ -148,7 +175,7 @@ h6 {
     padding: 6px 8px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    background: white;
+    background-color: white;
 }
 
 #q {
@@ -176,7 +203,7 @@ h6 {
     display: inline-block;
     margin: 0 6px 6px 0;
     padding: 4px 8px;
-    background: #eef2f7;
+    background-color: #eef2f7;
     color: #1a232b;
     border-radius: 999px;
     font-size: 0.85em;
@@ -191,7 +218,7 @@ h6 {
 }
 
 .taglink:hover {
-    background: #e2e8f0;
+    background-color: #e2e8f0;
     border-color: #cbd5e1;
 }
 
@@ -210,7 +237,7 @@ h6 {
     display: inline-block;
     margin: 0 6px 6px 0;
     padding: 4px 8px;
-    background: #91bdf3;
+    background-color: #91bdf3;
     color: black;
     font-size: 0.85em;
     font-weight: bold;
