--- a/templates/main.html
+++ b/templates/main.html
@@ -84,17 +84,17 @@
 {% endif %}
 </h2>
 
-    {% set current_week_ns = namespace(current_week=none) %}
+    {% set current_date_ns = namespace(current_week=none) %}
     {% for entry in entries | sort(attribute='date', reverse=true) %}
         {% set entry_week = entry.date.isocalendar()[1] %}
-        {% if current_week_ns.current_week != entry_week %}
-        {% if current_week_ns.current_week is not none %}
+        {% if current_date_ns.current_week != entry_week %}
+        {% if current_date_ns.current_week is not none %}
     </ul>
     {% endif %}
 
     <hr class="hr-text" data-content="CW{{ entry_week }}">
     <ul>
-    {% set current_week_ns.current_week = entry_week %}
+    {% set current_date_ns.current_week = entry_week %}
     {% endif %}
         <li class="entry" id="{{ entry.date.strftime(JS_ENTRY_ID_FORMAT) }}" data-tags="{{ ' '.join(entry.tags) }}" data-rel-path="/{{ entry.rel_path.as_posix() }}" data-line-no="{{ entry.pos }}">
              <div class="entry-date" title="click to copy reference to this entry" onclick="setClipboard('[journal entry {{ entry.date.strftime('%Y-%m-%d %H:%M')}}]({{ entry.location }})')">🔗 {{ entry.date.strftime('%A, %Y-%m-%d %H:%M') }}</div>
@@ -116,7 +116,7 @@
                 </div>
         </li>
         {% endfor %}
-    {% if current_week_ns.current_week is not none %}
+    {% if current_date_ns.current_week is not none %}
     </ul>
     {% endif %}
 
