updating quicklaunch bar

--- a/templates/quicklaunch.html
+++ b/templates/quicklaunch.html
@@ -1,5 +1,4 @@
 <div id="quicklaunch">
-    <a href="/index.md" title="open /index.md">🏠</a><br>
-    <a href="/_journal" title="open journal">✍</a><br><br>
+    <a href="/index.md" title="open /index.md">🏠</a><br><br>
     <a href="javascript:window.open('/_media', 'mediamanager_window', 'popup')" title="open media manager">🖼️</a>
 </div>
